<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="@color/bilibili_red"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginLeft="7dp"
            android:text="@string/user_info"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/dark_grey"
            android:text="@string/user_info_sex"/>
        <TextView
            android:id="@+id/info_sex"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:textSize="14sp"
            android:textColor="@color/deep_dark_grey"
            android:text="@string/user_info_secret"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/dark_grey"
            android:text="@string/user_info_age"/>
        <TextView
            android:id="@+id/info_age"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:textSize="14sp"
            android:textColor="@color/deep_dark_grey"
            android:text="保密"/>
    </LinearLayout>

</LinearLayout>