<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_background"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:text="选择举报类型"
        android:layout_marginLeft="10dp"
        android:textSize="14sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#F2F2F2"
        />
    <TextView
        android:id="@+id/report_0"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:text="@string/report0"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        android:textSize="17sp"/>
    <View
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:background="#F2F2F2"
    />
    <TextView
        android:id="@+id/report_1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:text="@string/report1"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        android:textSize="17sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#F2F2F2"
        />
    <TextView
        android:id="@+id/report_2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:text="@string/report2"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        android:textSize="17sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#F2F2F2"
        />
    <TextView
        android:id="@+id/report_3"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:text="@string/report3"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        android:textSize="17sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#F2F2F2"
        />
    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:text="取消"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        android:textSize="17sp" />
</LinearLayout>