<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--个人介绍-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:src="@drawable/main_01"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:background="@drawable/main_bg"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:gravity="center">
            <TextView
                android:id="@+id/text_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_1"
                android:textColor="@color/black"
                android:lineSpacingExtra="6dp"
                android:textSize="20sp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/main_02"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:background="@drawable/main_bg"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:gravity="center">
            <TextView
                android:id="@+id/text_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_2"
                android:textColor="@color/black"
                android:lineSpacingExtra="6dp"
                android:textSize="20sp"/>
        </RelativeLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/main_03"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:background="@drawable/main_bg"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:gravity="center">
                <TextView
                    android:id="@+id/text_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_3"
                    android:lineSpacingExtra="6dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>
        </RelativeLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/main_04"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_bg"
            android:layout_marginTop="10dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="80dp"
            android:paddingBottom="80dp"
            android:gravity="center">
            <TextView
                android:id="@+id/text_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_4"
                android:lineSpacingExtra="6dp"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>