<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary">
            <ImageView
                android:id="@+id/back"
                android:clipToPadding="true"
                android:fitsSystemWindows="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/back"/>
        </android.support.v7.widget.Toolbar>
        <TextView
            android:id="@+id/title_chapter1_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="斜点"
            android:textSize="25sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/content_chapter1_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/chapter1_1"
            android:textSize="18sp"/>
        <ImageView
            android:id="@+id/img0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/xiedian"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/title_chapter1_2"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="撇点"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/content_chapter1_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/chapter1_2"
            android:textSize="18sp"/>
        <ImageView
            android:id="@+id/img1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/piedian"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/title_chapter1_3"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="挑点"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/content_chapter1_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/chapter1_3"
            android:textSize="18sp"/>
        <ImageView
            android:id="@+id/img2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tiaodian"
            android:layout_gravity="center_horizontal"/>

        <!--观看视频图标-->
        <ImageView
            android:id="@+id/watch_click"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:src="@drawable/chapter_movie"
            android:layout_marginTop="40dp"/>
    </LinearLayout>
</ScrollView>