<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app_background">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/colorPrimary">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="true"
            android:fitsSystemWindows="true">
            <TextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:gravity="bottom"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="发送私信"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:gravity="bottom"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:text="@string/send"
                android:textColor="@color/white"
                android:gravity="bottom"
                android:textSize="15sp"/>
        </FrameLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:id="@+id/send_letter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">
        <EditText
            android:id="@+id/send_letter_content"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/send_letter"
            android:background="@null"
            android:minLines="6"
            android:maxLines="10"
            android:gravity="top" />
        <!--加载圈-->
        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/send_letter_avi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AVLoadingIndicatorView"
            android:visibility="gone"
            app:indicatorName="BallSpinFadeLoaderIndicator"
            app:indicatorColor="#FDD5C4"
            android:layout_gravity="center"/>
        <FrameLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="15dp">
            <ImageView
                android:id="@+id/img"
                android:layout_width="80dp"
                android:layout_height="80dp"/>
            <ImageView
                android:id="@+id/imgdele"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/delete_img"
                android:layout_gravity="right"
                android:visibility="gone"/>
        </FrameLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">
        <ImageView
            android:id="@+id/send_letter_img"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/write_dynamic_pic"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"/>
    </FrameLayout>

</LinearLayout>